fix quitPlan
